WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170386
[Cocoa] A couple of UI strings use three periods instead of an ellipsis
https://bugs.webkit.org/show_bug.cgi?id=170386
Summary
[Cocoa] A couple of UI strings use three periods instead of an ellipsis
mitz
Reported
2017-04-01 17:09:34 PDT
"Styles..." and "Loading...". Patch forthcoming.
Attachments
Change periods to ellipsis
(2.83 KB, patch)
2017-04-01 17:11 PDT
,
mitz
thorton
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2017-04-01 17:11:28 PDT
Created
attachment 306052
[details]
Change periods to ellipsis
Tim Horton
Comment 2
2017-04-01 17:15:05 PDT
Comment on
attachment 306052
[details]
Change periods to ellipsis We really need to fix prettypatch/bugzilla/whatever unicodes.
mitz
Comment 3
2017-04-01 17:18:07 PDT
Fixed in <
https://trac.webkit.org/r214720
>.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug