[Cocoa] A couple of UI strings use three periods instead of an ellipsis https://bugs.webkit.org/show_bug.cgi?id=170386

Reviewed by Tim Horton.

* English.lproj/Localizable.strings: Updated using update-webkit-localizable-strings.

* platform/LocalizedStrings.cpp:
(WebCore::mediaElementLoadingStateText): Changed "Loading..." to "Loading…".

* platform/cocoa/LocalizedStringsCocoa.mm:
(WebCore::contextMenuItemTagStyles): Changed "Styles..." to "Styles…".



Canonical link: https://commits.webkit.org/187301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@214720 268f45cc-cd09-0410-ab3c-d52691b4dbfc